# python-demoapp

./: .gitignore  .releaserc  CHANGELOG.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
demoapp/: main.py
tests/: test_demoapp.py
